force-app/main/default/objects/Attendance_Record__c/Attendance_Record__c.object-meta.xml
<CustomObject>
    <label>Attendance Record</label>
    <nameField>
        <label>Attendance Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendance Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>