force-app/main/default/objects/Attendance_Record__c/fields/Clock_in_Time__c.field-meta.xml
<CustomField>
    <fullName>Clock_in_Time__c</fullName>
    <label>Clock-in Time</label>
    <type>DateTime</type>
</CustomField>