force-app/main/default/objects/Attendance_Record__c/fields/Clock_out__c.field-meta.xml
<CustomField>
    <fullName>Clock_out__c</fullName>
    <label>Clock-out</label>
    <type>DateTime</type>
</CustomField>